force-app/main/default/objects/KDCE_QualtricsResponse__c/KDCE_QualtricsResponse__c.object-meta.xml
<CustomObject>
    <label>Qualtrics Response</label>
    <nameField>
        <displayFormat>QR-{0000000}</displayFormat>
        <label>Qualtrics Response 이름</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualtrics Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>