force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/brandproductnps__c.field-meta.xml
<CustomField>
    <fullName>brandproductnps__c</fullName>
    <label>Brand Product NPS</label>
    <length>4</length>
    <type>Text</type>
</CustomField>