force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/brandproductnpsgroups__c.field-meta.xml
<CustomField>
    <fullName>brandproductnpsgroups__c</fullName>
    <label>Brand Product NPS Groups</label>
    <length>20</length>
    <type>Text</type>
</CustomField>