force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/brandproductnpsopen__c.field-meta.xml
<CustomField>
    <fullName>brandproductnpsopen__c</fullName>
    <label>Brand Product NPS Open</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>