force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/brandproductnpsopen_topics__c.field-meta.xml
<CustomField>
    <fullName>brandproductnpsopen_topics__c</fullName>
    <label>Brand Product NPS Open Topics</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>