force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/cesnumber__c.field-meta.xml
<CustomField>
    <fullName>cesnumber__c</fullName>
    <label>CES Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>