force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/cesopen__c.field-meta.xml
<CustomField>
    <fullName>cesopen__c</fullName>
    <label>CES Open</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>