force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/cesopen_topics__c.field-meta.xml
<CustomField>
    <fullName>cesopen_topics__c</fullName>
    <label>CES Open Topics</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>