force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <label>Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>