force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/channelnps__c.field-meta.xml
<CustomField>
    <fullName>channelnps__c</fullName>
    <label>Channel NPS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>