force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/channelnpsgroups__c.field-meta.xml
<CustomField>
    <fullName>channelnpsgroups__c</fullName>
    <label>Channel NPS Groups</label>
    <length>20</length>
    <type>Text</type>
</CustomField>