force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/channelnpsopen__c.field-meta.xml
<CustomField>
    <fullName>channelnpsopen__c</fullName>
    <label>Channel NPS Open</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>