force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/channelnpsopen_topics__c.field-meta.xml
<CustomField>
    <fullName>channelnpsopen_topics__c</fullName>
    <label>Channel NPS Open Topics</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>