force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/cjstageadvocate2__c.field-meta.xml
<CustomField>
    <fullName>cjstageadvocate2__c</fullName>
    <label>CJ Stage Advocate 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>