force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/cjstagebond__c.field-meta.xml
<CustomField>
    <fullName>cjstagebond__c</fullName>
    <label>CJ Stage Bond</label>
    <length>10</length>
    <type>Text</type>
</CustomField>