force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/cjstageuseconvert__c.field-meta.xml
<CustomField>
    <fullName>cjstageuseconvert__c</fullName>
    <label>CJ Stage Use Convert</label>
    <length>10</length>
    <type>Text</type>
</CustomField>