force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/consentfollowup__c.field-meta.xml
<CustomField>
    <fullName>consentfollowup__c</fullName>
    <label>Consent Follow-Up</label>
    <length>10</length>
    <type>Text</type>
</CustomField>