force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/Consumer_ID__c.field-meta.xml
<CustomField>
    <fullName>Consumer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Consumer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>