force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/consumerprogram__c.field-meta.xml
<CustomField>
    <fullName>consumerprogram__c</fullName>
    <label>Consumer Program</label>
    <length>50</length>
    <type>Text</type>
</CustomField>