force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KDCE_Qualtrics_Response</relationshipLabel>
    <relationshipName>KDCE_Qualtrics_Response</relationshipName>
    <type>Lookup</type>
</CustomField>