force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/conversionlevel__c.field-meta.xml
<CustomField>
    <fullName>conversionlevel__c</fullName>
    <label>Conversion Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>