force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/customercare__c.field-meta.xml
<CustomField>
    <fullName>customercare__c</fullName>
    <label>Customer Care</label>
    <length>30</length>
    <type>Text</type>
</CustomField>