force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/customercaregroup__c.field-meta.xml
<CustomField>
    <fullName>customercaregroup__c</fullName>
    <label>Customer Care Group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>