force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/digital__c.field-meta.xml
<CustomField>
    <fullName>digital__c</fullName>
    <label>Digital</label>
    <length>30</length>
    <type>Text</type>
</CustomField>