force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/directretail__c.field-meta.xml
<CustomField>
    <fullName>directretail__c</fullName>
    <label>Direct Retail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>