force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/directretail_kr__c.field-meta.xml
<CustomField>
    <fullName>directretail_kr__c</fullName>
    <label>Direct Retail KR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>