force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/directretailgroup__c.field-meta.xml
<CustomField>
    <fullName>directretailgroup__c</fullName>
    <label>Direct Retail Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>