force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/directretailregion__c.field-meta.xml
<CustomField>
    <fullName>directretailregion__c</fullName>
    <label>Direct Retail Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>