force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/directretailregion_kr__c.field-meta.xml
<CustomField>
    <fullName>directretailregion_kr__c</fullName>
    <label>Direct Retail Region KR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>