force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/huddle__c.field-meta.xml
<CustomField>
    <fullName>huddle__c</fullName>
    <label>Huddle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>