force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/indirectretail__c.field-meta.xml
<CustomField>
    <fullName>indirectretail__c</fullName>
    <label>Indirect Retail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>