force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/indirectretailgroup__c.field-meta.xml
<CustomField>
    <fullName>indirectretailgroup__c</fullName>
    <label>Indirect Retail Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>