force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/indirectretailregion__c.field-meta.xml
<CustomField>
    <fullName>indirectretailregion__c</fullName>
    <label>Indirect Retail Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>