force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/issueresolution__c.field-meta.xml
<CustomField>
    <fullName>issueresolution__c</fullName>
    <label>Issue Resolution</label>
    <length>10</length>
    <type>Text</type>
</CustomField>