force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <label>Month</label>
    <length>4</length>
    <type>Text</type>
</CustomField>