force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/npscombined__c.field-meta.xml
<CustomField>
    <fullName>npscombined__c</fullName>
    <label>NPS Combined</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>