force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/npscombined_topics__c.field-meta.xml
<CustomField>
    <fullName>npscombined_topics__c</fullName>
    <label>NPS Combined Topics</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>