force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/programnps__c.field-meta.xml
<CustomField>
    <fullName>programnps__c</fullName>
    <label>Program NPS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>