force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/programnpsgroups__c.field-meta.xml
<CustomField>
    <fullName>programnpsgroups__c</fullName>
    <label>Program NPS Groups</label>
    <length>20</length>
    <type>Text</type>
</CustomField>