force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/programnpsopen__c.field-meta.xml
<CustomField>
    <fullName>programnpsopen__c</fullName>
    <label>Program NPS Open</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>