force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/programnpsopen_topics__c.field-meta.xml
<CustomField>
    <fullName>programnpsopen_topics__c</fullName>
    <label>Program NPS Open Topics</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>