force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/recordeddate__c.field-meta.xml
<CustomField>
    <fullName>recordeddate__c</fullName>
    <label>Recorded Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>