force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/response_id__c.field-meta.xml
<CustomField>
    <fullName>response_id__c</fullName>
    <label>Response ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>