force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/surveyenddate__c.field-meta.xml
<CustomField>
    <fullName>surveyenddate__c</fullName>
    <label>Survey End Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>