force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/surveystartdate__c.field-meta.xml
<CustomField>
    <fullName>surveystartdate__c</fullName>
    <label>Survey Start Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>