force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/touchpoint__c.field-meta.xml
<CustomField>
    <fullName>touchpoint__c</fullName>
    <label>Touchpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>