force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/touchpointdate__c.field-meta.xml
<CustomField>
    <fullName>touchpointdate__c</fullName>
    <label>Touchpoint Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>