force-app/main/default/objects/KDCE_QualtricsResponse__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>